--- a/index2.html
+++ b/index2.html
@@ -137,7 +137,7 @@
                             </div>
 
                             <div class="custom-control custom-radio mb-50">
-                                <input type="radio" id="clothRadio1" name="customRadio" class="custom-control-input">
+                                <input type="radio" id="clothRadio1" name="customRadio" class="custom-control-input" checked>
                                 <label class="custom-control-label mb-20" for="clothRadio1">Wybierz materiał z oferty</label>
 
                                 <div class="custom-radio-dependent">
