--- a/index.html
+++ b/index.html
@@ -76,6 +76,12 @@
                 </div>
             </div>
 
+            <div class="productList-view text-right d-none d-xxl-block">
+                Widok
+                <button class="btn btn-setView ml-20 gray-500" onclick="setProductView(this, '4')">4</button>
+                <button class="btn btn-setView app-color-1" onclick="setProductView(this, '6')">6</button>
+            </div>
+
             <div class="productList row mx-0" id="miXItUp">
 
                 <div class="product-card mix armchair col-sm-6 col-md-4 col-xl-3 col-xxl-2" data-new="NOWOŚĆ">
