--- a/index2.html
+++ b/index2.html
@@ -257,7 +257,7 @@
     </footer>
 
     <div class="modal fade" id="basketModal" tabindex="-1" role="dialog" aria-hidden="true">
-        <div class="modal-dialog modal-lg" role="document">
+        <div class="modal-dialog modal-lg modal-dialog-centered" role="document">
             <div class="modal-content">
                 <div class="modal-header">
                     <h5 class="modal-title">Produkt dodany do Koszyka</h5>
