--- a/index2.html
+++ b/index2.html
@@ -61,7 +61,7 @@
         </div>
     </header>
 
-    <main class="mainContent">
+    <main class="mainContent pb-0">
 
         <div class="container">
 
@@ -71,13 +71,27 @@
 
             <nav aria-label="breadcrumb">
                 <ol class="breadcrumb">
-                    <li class="breadcrumb-item"><a href="#">Home</a></li>
-                    <li class="breadcrumb-item"><a href="#">Lista produktów</a></li>
                     <li class="breadcrumb-item active" aria-current="page">Alvesta Pillow Armchair Black Metal</li>
                 </ol>
             </nav>
 
             <div class="productCard">
+
+                <div class="row mb-30 mt-n10">
+                    <div class="col-md-4">
+                        1 z 42 produktów
+                    </div>
+                    <div class="col-md-4 d-flex justify-content-center">
+                        <div class="backward mr-20">
+                            <a href=""><i class="icon-transfer-left"></i> POPRZEDNI</a>
+                        </div>
+                        <div class="forward ml-20">
+                            <a href="">NASTĘPNY <i class="icon-transfer-right"></i></a>
+                        </div>
+                    </div>
+                </div>
+
+
 
                 <div class="row no-gutters mb-60">
                     <div class="col-lg-4">
@@ -180,30 +194,30 @@
                     </div>
                 </div>
 
-                <div class="productCard-summary">
-
-                    <div class="row">
-                        <div class="col-lg-5 col-xl-6 mb-20">
-                            <h4>Alvesta Pillow Armchair Black Metal</h4>
-                            <p>Własny materiał</p>
-                            1 szt.
-                        </div>
-                        <div class="col-lg-7 col-xl-6 mb-10 d-flex flex-column flex-sm-row justify-content-between align-items-sm-center">
-                            <div class="product-price my-10">
-                                210,00 <small>EUR</small>
-                            </div>
-                            <div class="my-10">
-                                <button type="button" class="btn btn-primary btn-lg" data-toggle="modal" data-target="#basketModal">
-                                    DODAJ DO ZAMÓWIENIA
-                                </button>
-                            </div>
-                        </div>
-                    </div>
-
-                </div>
-
             </div>
 
+        </div>
+
+        <div class="productCard-summary">
+            <div class="container">
+                <div class="row">
+                    <div class="col-lg-5 col-xl-6 mb-20">
+                        <h4>Alvesta Pillow Armchair Black Metal</h4>
+                        <p>Własny materiał</p>
+                        1 szt.
+                    </div>
+                    <div class="col-lg-7 col-xl-6 mb-10 d-flex flex-column flex-sm-row justify-content-between align-items-sm-center">
+                        <div class="product-price my-10">
+                            210,00 <small>EUR</small>
+                        </div>
+                        <div class="my-10">
+                            <button type="button" class="btn btn-primary btn-lg" data-toggle="modal" data-target="#basketModal">
+                                DODAJ DO ZAMÓWIENIA
+                            </button>
+                        </div>
+                    </div>
+                </div>
+            </div>
         </div>
 
     </main>
