--- a/index3.html
+++ b/index3.html
@@ -71,7 +71,6 @@
 
             <nav aria-label="breadcrumb">
                 <ol class="breadcrumb">
-                    <li class="breadcrumb-item"><a href="#">Home</a></li>
                     <li class="breadcrumb-item active" aria-current="page">Koszyk - Produkty do wyceny</li>
                 </ol>
             </nav>
@@ -80,9 +79,7 @@
                 <div class="basket-product-list">
 
                     <div class="basket-product-list-head">
-                        <div class="col-product">
-                            <h3>Produkty</h3>
-                        </div>
+                        <div class="col-product"></div>
                         <div class="col-unit-price">
                             Cena za szt.
                         </div>
@@ -92,9 +89,7 @@
                         <div class="col-price">
                             Wartość
                         </div>
-                        <div class="col-remove">
-                            Usuń
-                        </div>
+                        <div class="col-remove"></div>
                     </div>
                     <div class="basket-product-list-row">
                         <div class="col-product">
