--- a/reset-2.html
+++ b/reset-2.html
@@ -20,16 +20,23 @@
 
     <div class="container py-20 d-flex flex-column justify-content-center flex-grow-1">
         <div class="bg-white py-40 px-20">
+
             <img src="images/polset-logo-black.svg" alt="POLSET" class="brand">
             <div class="text-center pb-30">
-                <h2>System zamówień</h2>
+                <h2>Resetowanie hasła</h2>
             </div>
-            <div class="row justify-content-center py-40">
-                <div class="col-md-5 col-md-4 col-xxl-3 mb-20">
-                    <a href="" class="btn btn-block btn-lg btn-black ">LOGOWANIE <i class="icon-transfer-right"></i></a>
+
+            <div class="row justify-content-center">
+                <div class="col-md-10 col-lg-8 col-xxl-6">
+                    <div class="alert alert-secondary" role="alert">
+                        <small>Na podany adres <strong><a href="">grzegorz.brzeczyszczykiewicz@gmail.com</a></strong> wysłaliśmy link do resetowania hasła. Link jest ważny przez 24 h. Odbierz e-mail i przejdź na stronę resetowania hasła, gdzie wpiszesz nowe hasło, lub zignoruj e-mail, jeśli w międzyczasie przypomniałeś sobie hasło.</small>
+                    </div>
                 </div>
-                <div class="col-md-5 col-md-4 col-xxl-3 mb-20">
-                    <a href="" class="btn btn-block btn-lg btn-outline-black">REJESTRACJA <i class="icon-transfer-right"></i></a>
+            </div>
+
+            <div class="row justify-content-center py-40">
+                <div class="col-md-8 col-lg-6 col-xxl-4">
+                    <a href="" class="btn btn-lg btn-black btn-block mb-20">LOGOWANIE <i class="icon-transfer-right"></i></a>
                 </div>
             </div>
 
