--- a/reset-1.html
+++ b/reset-1.html
@@ -20,16 +20,36 @@
 
     <div class="container py-20 d-flex flex-column justify-content-center flex-grow-1">
         <div class="bg-white py-40 px-20">
+
+            <div class="backward">
+                <a href=""><i class="icon-transfer-left"></i> wróć do <strong>logowania</strong></a>
+            </div>
+
             <img src="images/polset-logo-black.svg" alt="POLSET" class="brand">
             <div class="text-center pb-30">
-                <h2>System zamówień</h2>
+                <h2>Resetowanie hasła</h2>
             </div>
-            <div class="row justify-content-center py-40">
-                <div class="col-md-5 col-md-4 col-xxl-3 mb-20">
-                    <a href="" class="btn btn-block btn-lg btn-black ">LOGOWANIE <i class="icon-transfer-right"></i></a>
+
+            <div class="row justify-content-center">
+                <div class="col-md-10 col-lg-8 col-xxl-6">
+                    <div class="alert alert-secondary" role="alert">
+                        <small>Jeśli nie pamietasz hasła, możesz je zresetować.<br>
+                            Wpisz poniżej swój adres e-mail, na który wyślemy link do resetowania hasła.</small>
+                    </div>
                 </div>
-                <div class="col-md-5 col-md-4 col-xxl-3 mb-20">
-                    <a href="" class="btn btn-block btn-lg btn-outline-black">REJESTRACJA <i class="icon-transfer-right"></i></a>
+            </div>
+
+            <div class="row justify-content-center py-40">
+                <div class="col-md-8 col-lg-6 col-xxl-4">
+
+                    <form>
+                        <div class="form-group">
+                            <label for="email">Adres e-mail</label>
+                            <input type="text" class="form-control" id="email" placeholder="">
+                        </div>
+                        <button type="submit" class="btn btn-lg btn-primary btn-block mb-20">RESETUJ</button>
+                    </form>
+
                 </div>
             </div>
 
