--- a/index2.html
+++ b/index2.html
@@ -307,7 +307,7 @@
                     <div class="backward mt-20">
                         <a href=""><i class="icon-transfer-left"></i> wróć do zakupów</a>
                     </div>
-                    <button type="button" class="btn btn-primary">ZAMÓW</button>
+                    <button type="button" class="btn btn-primary px-50">ZAMÓW</button>
                 </div>
             </div>
         </div>
