--- a/index3.html
+++ b/index3.html
@@ -107,6 +107,14 @@
                                     <strong>50,00</strong> EUR
                                     <small class="d-block">Cowboy 802 camel (25,00 EUR/mb x 2 mb = 50,00 EUR)</small>
                                 </p>
+                                <div class="col-product-comments">
+                                    <button class="btn col-product-comments-btn" data-toggle="collapse" href="#addComment1" role="button" aria-expanded="false" aria-controls="addComment1">
+                                        <span>Uwagi do produktu (opcjonalnie) </span> <i class="icon-plus"></i>
+                                    </button>
+                                    <div class="collapse col-product-comments-collapse" id="addComment1">
+                                        <textarea class="form-control" name="3" id="" cols="30" rows="10"></textarea>
+                                    </div>
+                                </div>
                             </div>
                         </div>
                         <div class="col-unit-price">
@@ -142,6 +150,14 @@
                                     <strong>50,00</strong> EUR
                                     <small class="d-block">Cowboy 802 camel (25,00 EUR/mb x 2 mb = 50,00 EUR)</small>
                                 </p>
+                                <div class="col-product-comments">
+                                    <button class="btn col-product-comments-btn" data-toggle="collapse" href="#addComment2" role="button" aria-expanded="false" aria-controls="addComment2">
+                                        <span>Uwagi do produktu (opcjonalnie) </span> <i class="icon-plus"></i>
+                                    </button>
+                                    <div class="collapse col-product-comments-collapse" id="addComment2">
+                                        <textarea class="form-control" name="3" id="" cols="30" rows="10"></textarea>
+                                    </div>
+                                </div>
                             </div>
                         </div>
                         <div class="col-unit-price">
@@ -177,6 +193,14 @@
                                     <strong>50,00</strong> EUR
                                     <small class="d-block">Cowboy 802 camel (25,00 EUR/mb x 2 mb = 50,00 EUR)</small>
                                 </p>
+                                <div class="col-product-comments">
+                                    <button class="btn col-product-comments-btn" data-toggle="collapse" href="#addComment3" role="button" aria-expanded="false" aria-controls="addComment3">
+                                        <span>Uwagi do produktu (opcjonalnie) </span> <i class="icon-plus"></i>
+                                    </button>
+                                    <div class="collapse col-product-comments-collapse" id="addComment3">
+                                        <textarea class="form-control" name="3" id="" cols="30" rows="10"></textarea>
+                                    </div>
+                                </div>
                             </div>
                         </div>
                         <div class="col-unit-price">
@@ -213,6 +237,16 @@
 
                     <div class="row justify-content-center">
                         <div class="col-sm-10 col-md-8 col-lg-6">
+
+
+                            <div class="col-product-comments mb-60">
+                                <button class="btn col-product-comments-btn" data-toggle="collapse" href="#addCommentGeneral" role="button" aria-expanded="false" aria-controls="addCommentGeneral">
+                                    <span>Uwagi do zamówienia (opcjonalnie) </span> <i class="icon-plus"></i>
+                                </button>
+                                <div class="collapse col-product-comments-collapse" id="addCommentGeneral">
+                                    <textarea class="form-control" name="3" id="" cols="30" rows="10"></textarea>
+                                </div>
+                            </div>
 
                             <div class="custom-control custom-checkbox mb-20">
                                 <input type="checkbox" class="custom-control-input" id="check1">
